Card Maker Version History
--------------------------
1.4.0.0
- Adjusted Image Cache to track last updated times on files
- Added WebP image support (import/export & Windows only) via SkiaSharp (https://github.com/mono/SkiaSharp)
- Added card index functionality for image export
- Added basic gradient functionality to Text elements (MarkVabulas)
- Added ability to access element fields with &[fieldname]
- Added new graphic element type option to draw the graphic at the element origin

1.3.0.0
- Overhaul to Google sheet selection due to security policy changes
- Added detection for main window launch on non-existent screens (will re-position to 0,0)
- Added a number of options for pdf export (combobox) based on context
- Added PDF export support for the export name format (on export you can use it or further customize the output file)
- Added layoutname as another card value
- Added padl and padr to allow for padding of strings
- Added ability to pick colors from the entire screen when using the color selection dialog.
- Added font scale markup (fscl) to scale a font vertically/horizontally.
- Added caps markup for forcing all text within to be all caps
- Added mirror markups for FormattedText (<mv> & <mh>). This affects inline images/background images only.
- Added mirror element option (all element types)
- Added new reference macros: ![refline] and ![refname]
- Added reference information to the canvas window title text

1.2.0.0
- Updated application to use .NET 4.8
- Added math function to the Incept translator
- Added Image Color tag for FormattedText (<ic>)
- Added group logic to switch statements so multiple matches can have the same result
- Updated ClosedXML (support newer Excel functionality)
- Added alternative parameter sets for the font <f> tag in FormattedText
- Added FormattedText marginleft and marginright tags.
- Fixed issue with page resizing/margins on PDF export